--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="bienvenido">Bienvenido</string>
     <string name="bienvenida"> " " </string>
     <string name="nombre">" "</string>
+    <string name="clase">Clase PMDM 2023-2024</string>
 </resources>
